# omatunes

./: Cargo.toml  README.md  USER_MANUAL.md
scripts/: omatunes_text.py  omatunes_volume.sh
src/: app.rs  config.rs  db.rs  main.rs
src/audio/: mod.rs  mpris.rs  player.rs  spectrum.rs
src/ui/: icons.rs  mod.rs  theme.rs
src/ui/components/: controls.rs  mod.rs  playlist_dialog.rs  progress.rs  tag_editor.rs
src/ui/views/: library.rs  mod.rs  player.rs  playlist.rs  spectrum.rs  spectrum_view.rs
